src/test/ui/type_changing_struct_update_rfc_2528/basic_tests_setup.stderr
error[E0308]: mismatched types
  --> $DIR/basic_tests_setup.rs:19:15
   |
LL |             ..self
   |               ^^^^ expected struct `State2`, found struct `State1`
   |
   = note: expected struct `Machine<State2>`
              found struct `Machine<State1>`
